--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.h2.console.path=/h2-console
 # Configuração para mostrar o SQL no console
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
+# Keys
+jwt.public.key=publicKey
+jwt.private.key=privateKey
