Create login controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 # Keys
-jwt.public.key=publicKey
-jwt.private.key=privateKey
+jwt.public.key=classpath:app.pub
+jwt.private.key=classpath:app.key
